# voxflow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json
specs/: 0001-spec.md  0002-design.md  0003-implementation-plan.md  instructions.md
src/: App.tsx  audio-capture.ts  clipboard-fallback.ts  diff-engine.ts  focus-check.ts  scribe-client.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  error.rs  focus.rs  keys.rs  lib.rs  main.rs  permissions.rs  shortcut.rs  state.rs  tray.rs
src/components/: TranscriptionIndicator.tsx
src/stores/: config-store.ts  transcription-store.ts
