[package]
name = "vox-flow"
version = "0.1.0"
description = "Real-time voice-to-text macOS app"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
publish = false

[lib]
name = "vox_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
cpal = { workspace = true }
dirs = "6"
ringbuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-window-state = { version = "2" }
tauri-plugin-global-shortcut = { version = "2" }
tauri-plugin-clipboard-manager = { version = "2" }
tauri-plugin-notification = { version = "2" }
tauri-plugin-macos-permissions = { version = "2" }
macos-accessibility-client = "0.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
app-core = { path = "../app-core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
accessibility = "0.2"
accessibility-sys = "0.2"
core-foundation = "0.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# otherwise apply `.features("development")` to your tauri builder
# Default features include production features and development server
default = ["custom-protocol"]
# You should remove the "custom-protocol" feature before building for production
# DO NOT use this feature in production apps as it creates a security risk
# Read more: https://docs.rs/tauri/2/tauri/dev/security/index.html#isolation-pattern
custom-protocol = ["tauri/custom-protocol"]
